# advent-of-code-2024

./: .gitignore  README.md  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.github/workflows/: pytest.yml
src/day01/: solver_day_01_part_a.py  solver_day_01_part_b.py  solver_part_a.py  solver_part_b.py  test_solvers.py  test_solvers_day_01.py
src/day02/: solver_day_02_part_a.py  solver_day_02_part_b.py  solver_part_a.py  solver_part_b.py  test_solvers.py  test_solvers_day_02.py
src/day03/: solver_day_03_part_a.py  solver_day_03_part_b.py  test_solvers_day_03.py
src/day04/: solver_day_04_part_a.py  solver_day_04_part_b.py  test_solvers_day_04.py
src/day05/: solver_day_05_part_a.py  solver_day_05_part_b.py  test_solvers_day_05.py
src/day06/: solver_day_06_part_a.py  solver_day_06_part_b.py  test_solvers_day_06.py
src/day07/: solver_day_07_part_a.py  solver_day_07_part_b.py  test_solvers_day_07.py
src/day08/: solver_day_08_part_a.py  solver_day_08_part_b.py  test_solvers_day_08.py
src/day09/: solver_day_09_part_a.py  solver_day_09_part_b.py  test_solvers_day_09.py
src/day10/: solver_day_10_part_a.py  solver_day_10_part_b.py  test_solvers_day_10.py
src/day_01_A/: day_01_A.py  test_day_01_A.py
src/day_01_A/tests/: test_day_01_A.py  test_day_01_part_A.py
src/day_01_B/: day_01_part_B.py
src/day_01_B/tests/: test_day_01_part_B.py
src/day_01_part_A/tests/: __init__.py
src/day_01_part_a/: day_01_part_a.py
src/day_01_part_a/tests/: test_day_01_part_a.py
src/day_01_part_b/: day_01_part_b.py
src/day_01_part_b/tests/: __init__.py  (+1 more)
(+1 files in other folders)
